added react to rails

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <%= javascript_pack_tag 'application' %>
+
     <title>P4</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
