--- a/client/src/App.css
+++ b/client/src/App.css
@@ -16,8 +16,30 @@ body {
   color: white;
 }
 
-#container {
+.container {
   display: flex;
   justify-content: center;
   /* align-content: center; */
+}
+h2 {
+  font-weight: 500;
+}
+input, button  {
+  border-radius: 10px;
+  padding: 25px 20px;
+  border: none;
+  background: none;
+  font-weight: 500;
+}
+button:hover, input:hover {
+  background-color: #FFFFFF90;
+}
+
+li {
+  list-style: none;
+}
+button:active {
+  -moz-outline-style: none;
+	outline:none;
+	outline: 0;
 }
