sign in style fix

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -19,7 +19,7 @@ body {
 .container {
   display: flex;
   justify-content: center;
-  /* align-content: center; */
+  align-content: center;
 }
 h2 {
   font-weight: 500;
